k8s/app/analysis-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysis-service
  namespace: analysis
  labels:
    app: analysis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analysis-service
  template:
    metadata:
      labels:
        app: analysis-service
    spec:
      serviceAccountName: analysis-sa
      containers:
        - name: analysis-service
          image: $IMAGE:$IMAGE_TAG
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
