k8s/app/analysis-service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: analysis-service
  namespace: analysis
spec:
  selector:
    app: analysis-service
  ports:
    - port: 8087
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analysis-ingress
  namespace: analysis
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sigma
    alb.ingress.kubernetes.io/group.order: "6"
    alb.ingress.kubernetes.io/certificate-arn: $CERT_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
    - http:
        paths:
          - path: /api/summary
            pathType: Prefix
            backend:
              service:
                name: analysis-service
                port:
                  number: 8087
